# 4_6_wheels_mobile_robot

./: DIFF_DRIVE_SETUP.md  robot_joystick_pipeline.md
install/: local_setup.sh  setup.sh
install/my_robot_bringup/share/ament_index/resource_index/package_run_dependencies/: my_robot_bringup
install/my_robot_bringup/share/my_robot_bringup/: package.sh  package.xml
install/my_robot_bringup/share/my_robot_bringup/config/: robot_joystick_bridge.yaml
install/my_robot_bringup/share/my_robot_bringup/launch/: my_robot.launch.py
install/my_robot_description/share/my_robot_description/: package.sh
install/my_robot_description/share/my_robot_description/urdf/: my_robot.urdf
log/: latest_build
src/my_robot_bringup/: CMakeLists.txt
src/my_robot_bringup/config/: my_robot_controllers.yaml
src/my_robot_bringup/joystick_mqtt_to_twist/: __init__.py  joystick_mqtt_to_twist.py  joystick_old.py
src/my_robot_description/rviz/: urdf_config.rviz
src/my_robot_description/urdf/: my_robot.urdf.xacro
